# libre-pago

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  librepago.db  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a9368b077657_initial_migration.py
app/: __init__.py  cache.py  config.py  dependencies.py  main.py  middleware.py  rate_limiter.py  seed.py
app/models/: __init__.py  closed_conversations.py
app/routers/: ads.py  csat.py  import_.py  lifecycles.py  mappings.py
app/schemas/: __init__.py  ads.py  lifecycle.py  mappings.py
app/scripts/: start.py
backend/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
backend/alembic/versions/: 3e573c70d2aa_create_users_table.py  41507629b062_update_models_add_canal_id_to_csat_and_.py  a9368b077657_initial_migration.py  initial.py
backend/app/: config.py  database.py  dependencies.py  logging_config.py  main.py
backend/app/models/: __init__.py  ads.py  closed_conversations.py  contact.py  csat.py  lifecycle.py  mappings.py  user.py
backend/docs/: API.md
backend/tests/: test_api.py
data/: ## Diccionario de Spreadsheets - Librepago.txt  Copy of Libre Pago - Cerradas.xlsx  Copy of LibrePago -  CSAT.xlsx  Copy of LibrePago - Ads.xlsx  Copy of LibrePago- Ciclos de Vida.xlsx
docs/: API.md
frontend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
(+21 files in other folders)
